--- a/assignments.Rmd
+++ b/assignments.Rmd
@@ -82,7 +82,7 @@ Objectives of this assignment
 
 Deadline: November 9, 9:00am
 
-Download: <!-- [html file](./assignments/assignment03.html) | [cont.csv dataset](./data/cont.csv) -->
+Download: [html file](./assignments/assignment03.html) | [cont.csv dataset](./data/cont.csv)
 
 Key: 
 <!-- [doc file](./assignments/keys/assignment03_key.docx); [R script](./assignments/keys/assignment03_key.R) -->
