--- a/slides/EDUC641_10_inference.Rmd
+++ b/slides/EDUC641_10_inference.Rmd
@@ -420,7 +420,7 @@ ggplot(data.frame(x = c(-4, 4)), aes(x = x)) +
 ---
 # You try...answered!
 
-The proportion of the area under the curve above a z-score of 0.53 is just under 0.30 ($\approx 0.296). Therefore, there is a 30 percent probability of randomly selecting a country with a national life expectancy greater than 76.
+The proportion of the area under the curve above a z-score of 0.53 is just under 0.30 ( $\approx$ 0.296). Therefore, there is a 30 percent probability of randomly selecting a country with a national life expectancy greater than 76.
 
 ```{r}
 ggplot(data.frame(x = c(-4, 4)), aes(x = x)) +
