--- a/schedule.Rmd
+++ b/schedule.Rmd
@@ -138,7 +138,7 @@ Lecture slides:
 
 - Data: [life_expectancy.csv](./data/life_expectancy.csv) | [codebook](./data/life_expectancy_codebook.pdf)
 - R code: [Class 7 script](./slides/EDUC641_7_code.R) | [Class 9 script](./slides/EDUC641_9_code.R)
-- Lab activities: [Week 5 lab](./labs/Lab5.docx)
+- Lab activities: [Week 5 lab](./labs/Lab5.docx) | [Week 6 lab](./labs/Lab6.docx)
 
 Assignment 3: 
 
@@ -170,8 +170,8 @@ Lecture slides:
 
 - Class 13 (11/7) slides: <!-- [html](./slides/EDUC641_14_continuousrel.html) | [pdf](./slides/EDUC641_14_continuousrel.pdf) -->
   + **No class on 11/9 (David traveling for conference)**
-- Class 14 (11/14) slides: <!-- [html](./slides/EDUC641_15_regression.html) | [pdf](./slides/EDUC641_15_regression.pdf)
-- Class 15-16 slides (11/16 & 11/21): [html](./slides/EDUC641_16_residuals.html) | [pdf](./slides/EDUC641_16_residuals.pdf) -->
+- Class 14 (11/14) slides: <!-- [html](./slides/EDUC641_15_regression.html) | [pdf](./slides/EDUC641_15_regression.pdf) -->
+- Class 15-16 slides (11/16 & 11/21): <!-- [html](./slides/EDUC641_16_residuals.html) | [pdf](./slides/EDUC641_16_residuals.pdf) -->
   + **No class on 11/23 (university holiday)**
 
 <!--
