--- a/assignments.Rmd
+++ b/assignments.Rmd
@@ -93,7 +93,7 @@ Continuous data 2: intro to bivariate regression
 
 Deadline: November 29, 11:59pm
 
-Download: <!-- [html file](./assignments/assignment04.html) | [cont.csv dataset](./data/cont.csv) -->
+Download: [html file](./assignments/assignment04.html) | [cont.csv dataset](./data/cont.csv)
 
 Key: 
 <!-- [doc file](./assignments/keys/assignment04_key.docx); [R script](./assignments/keys/assignment04_key.R) -->
