--- a/schedule.Rmd
+++ b/schedule.Rmd
@@ -168,21 +168,20 @@ Readings:
 
 Lecture slides: 
 
-- Class 13 (11/7) slides: <!-- [html](./slides/EDUC641_14_continuousrel.html) | [pdf](./slides/EDUC641_14_continuousrel.pdf) -->
+- Class 13 (11/7) slides: [html](./slides/EDUC641_13_continuousrel.html) | [pdf](./slides/EDUC641_13_continuousrel.pdf)
   + **No class on 11/9 (David traveling for conference)**
 - Class 14 (11/14) slides: <!-- [html](./slides/EDUC641_15_regression.html) | [pdf](./slides/EDUC641_15_regression.pdf) -->
 - Class 15-16 slides (11/16 & 11/21): <!-- [html](./slides/EDUC641_16_residuals.html) | [pdf](./slides/EDUC641_16_residuals.pdf) -->
   + **No class on 11/23 (university holiday)**
 
-<!--
 - Data:  [life_expectancy.csv](./data/life_expectancy.csv)
-- R code: [R script](./slides/EDUC641_14_code.R) -->
+- R code: [R script](./slides/EDUC641_14_code.R)
 
 Assignment 4: 
 
-- Due Nov. 27, 11:59pm <!--
+- Due Nov. 27, 11:59pm 
  - [html file](./assignments/assignment04.html)
- - [cont.csv](./data/cont.csv) -->
+ - [cont.csv](./data/cont.csv)
 
 ## Unit 5
 
