--- a/assignments.Rmd
+++ b/assignments.Rmd
@@ -85,7 +85,7 @@ Deadline: November 9, 11:59pm
 Download: [html file](./assignments/assignment03.html) | [cont.csv dataset](./data/cont.csv)
 
 Key: 
-<!-- [doc file](./assignments/keys/assignment03_key.docx); [R script](./assignments/keys/assignment03_key.R) -->
+[doc file](./assignments/keys/assignment03_key.docx); [R script](./assignments/keys/assignment03_key.R)
 
 ## 3.4. Assignment 4 
 
