--- a/schedule.Rmd
+++ b/schedule.Rmd
@@ -164,13 +164,13 @@ Objectives:
 
 Readings: 
 
-- [LSWR Chapter 15.1 and 15.2](https://learningstatisticswithr.com/lsr-0.6.pdf)
+- Complete **prior to Nov. 21** class: [LSWR Chapter 15.1 and 15.2](https://learningstatisticswithr.com/lsr-0.6.pdf)
 
 Lecture slides: 
 
 - Class 13 (11/7) slides: [html](./slides/EDUC641_13_continuousrel.html) | [pdf](./slides/EDUC641_13_continuousrel.pdf)
   + **No class on 11/9 (David traveling for conference)**
-- Class 14 (11/14) slides: <!-- [html](./slides/EDUC641_15_regression.html) | [pdf](./slides/EDUC641_15_regression.pdf) -->
+- Class 14 (11/14) slides: [html](./slides/EDUC641_14_regression.html) | [pdf](./slides/EDUC641_14_regression.pdf)
 - Class 15-16 slides (11/16 & 11/21): <!-- [html](./slides/EDUC641_16_residuals.html) | [pdf](./slides/EDUC641_16_residuals.pdf) -->
   + **No class on 11/23 (university holiday)**
 
