--- a/schedule.Rmd
+++ b/schedule.Rmd
@@ -171,7 +171,7 @@ Lecture slides:
 - Class 13 (11/7) slides: [html](./slides/EDUC641_13_continuousrel.html) | [pdf](./slides/EDUC641_13_continuousrel.pdf)
   + **No class on 11/9 (David traveling for conference)**
 - Class 14 (11/14) slides: [html](./slides/EDUC641_14_regression.html) | [pdf](./slides/EDUC641_14_regression.pdf)
-- Class 15-16 slides (11/16 & 11/21): <!-- [html](./slides/EDUC641_16_residuals.html) | [pdf](./slides/EDUC641_16_residuals.pdf) -->
+- Class 15-16 slides (11/16 & 11/21): [html](./slides/EDUC641_15_regression2.html) | [pdf](./slides/EDUC641_15_regression2.pdf) 
   + **No class on 11/23 (university holiday)**
 
 - Data:  [life_expectancy.csv](./data/life_expectancy.csv)
